fixed height of home background video, fixed about page rightside white space

--- a/src/components/pages/IosDev.css
+++ b/src/components/pages/IosDev.css
@@ -100,8 +100,8 @@
 
 .link-about {
   text-align: center;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: 18px;
+  padding-right: 18px;
   margin-bottom: 40px;
 }
 
